pkg/check/testdata/ub/types/valid/merge-map-unknown.ub
inputs: { tags: { type: map(string) } }
resources: { one: local.file { path: @core.merge(input.tags, { a: 'x' }), content: 'c' } }
