pkg/check/testdata/ub/types/invalid/merge-precise-object.ub
resources: { one: local.file { path: @core.merge({ a: 1 }, { b: 'x' }), content: 'c' } }
